# django-saas-template

./: .gitignore  README.md  pyproject.toml
django_saas_template/: manage.py
django_saas_template/core/: models.py
django_saas_template/django_saas_template/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
django_saas_template/organisations/: admin.py  models.py
django_saas_template/organisations/migrations/: 0001_initial.py
django_saas_template/subscriptions/: admin.py  models.py
django_saas_template/subscriptions/migrations/: 0001_initial.py  0002_auto_20220330_2239.py
django_saas_template/userfront/: apps.py  dataclasses.py  urls.py  views.py
django_saas_template/users/: admin.py  models.py  tokens.py
django_saas_template/users/migrations/: 0001_initial.py
